完成哈奇模版界面

--- a/passportlib/src/main/res/layout/fragment_login_password_default.xml
+++ b/passportlib/src/main/res/layout/fragment_login_password_default.xml
@@ -23,7 +23,7 @@
         style="@style/PassportDivider"
         android:layout_width="match_parent"
         android:layout_below="@id/login_password_phone_edt"/>
-    <cc.seedland.inf.passport.widget.PasswordEditText
+    <cc.seedland.inf.passport.widget.PasswordOEditText
         android:id="@+id/login_password_password_edt"
         style="@style/PasswordEdit"
         android:layout_width="match_parent"
