--- a/passportlib/src/main/res/layout/fragment_password_modify_default.xml
+++ b/passportlib/src/main/res/layout/fragment_password_modify_default.xml
@@ -6,21 +6,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/size_common_15">
-    <cc.seedland.inf.passport.widget.PasswordEditText
+    <cc.seedland.inf.passport.widget.PasswordOEditText
         android:id="@+id/password_modify_origin_edt"
         style="@style/PasswordEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:hint="@string/password_modify_hint_origin"
         app:button="@drawable/password_show_selector"/>
-    <cc.seedland.inf.passport.widget.PasswordEditText
+    <cc.seedland.inf.passport.widget.PasswordOEditText
         android:id="@+id/password_modify_current_edt"
         style="@style/PasswordEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:hint="@string/hint_password"
         app:button="@drawable/password_show_selector"/>
-    <cc.seedland.inf.passport.widget.PasswordEditText
+    <cc.seedland.inf.passport.widget.PasswordOEditText
         android:id="@+id/password_modify_confirm_edt"
         style="@style/PasswordEdit"
         android:layout_width="match_parent"
