--- a/passportlib/src/main/res/layout/fragment_password_reset_default.xml
+++ b/passportlib/src/main/res/layout/fragment_password_reset_default.xml
@@ -58,14 +58,14 @@
             app:endText="@string/text_captcha_retrieve"/>
     </LinearLayout>
 
-    <cc.seedland.inf.passport.widget.PasswordEditText
+    <cc.seedland.inf.passport.widget.PasswordOEditText
         android:id="@+id/password_reset_password_edt"
         style="@style/PasswordEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:hint="@string/hint_password"
         app:button="@drawable/password_show_selector"/>
-    <cc.seedland.inf.passport.widget.PasswordEditText
+    <cc.seedland.inf.passport.widget.PasswordOEditText
         android:id="@+id/password_reset_confirm_edt"
         style="@style/PasswordEdit"
         android:layout_width="match_parent"
