--- a/passportlib/src/main/res/values/colors.xml
+++ b/passportlib/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="default_gray">#cfcfcf</color>
     <color name="default_black">#4a4a4a</color>
     <color name="bg_button">#1a88cb</color>
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
 </resources>
