--- a/passportlib/src/main/res/layout/fragment_login_password_default.xml
+++ b/passportlib/src/main/res/layout/fragment_login_password_default.xml
@@ -1,7 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="@dimen/size_common_15">
 
     <ImageView
@@ -23,14 +22,13 @@
         style="@style/PassportDivider"
         android:layout_width="match_parent"
         android:layout_below="@id/login_password_phone_edt"/>
-    <cc.seedland.inf.passport.widget.PasswordOEditText
+    <cc.seedland.inf.passport.widget.PasswordEditText
         android:id="@+id/login_password_password_edt"
         style="@style/PasswordEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/login_password_phone_div"
-        app:hint="@string/login_hint_password"
-        app:button="@drawable/password_show_selector"/>
+        android:hint="@string/login_hint_password" />
     <View
         android:id="@+id/login_password_div"
         style="@style/PassportDivider"
