--- a/passportlib/src/main/res/layout/fragment_login_password_hachi.xml
+++ b/passportlib/src/main/res/layout/fragment_login_password_hachi.xml
@@ -9,7 +9,7 @@
         android:layout_alignParentTop="true" />
     <View
         android:id="@+id/login_password_phone_div"
-        style="@style/PassportDivider"
+        style="@style/HachiDivider"
         android:layout_width="match_parent"
         android:layout_below="@id/login_password_phone_edt"/>
     <cc.seedland.inf.passport.widget.ClearEditText
@@ -17,13 +17,12 @@
         style="@style/HachiPasswordEdit"
         android:layout_width="match_parent"
         android:layout_below="@id/login_password_phone_div"
-        android:hint="@string/login_hint_password" />
+        android:hint="@string/login_hint_password_hachi" />
     <View
         android:id="@+id/login_password_div"
-        style="@style/PassportDivider"
+        style="@style/HachiDivider"
         android:layout_width="match_parent"
-        android:layout_below="@id/login_password_password_edt"
-        android:layout_marginBottom="@dimen/size_common_10"/>
+        android:layout_below="@id/login_password_password_edt" />
     <Button
         android:id="@+id/login_password_perform_btn"
         style="@style/HachiPerformBtn"
@@ -36,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/login_password_perform_btn"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="@dimen/size_common_30"
+        android:layout_marginTop="@dimen/size_common_25"
         android:layout_marginRight="@dimen/size_common_15"
         android:text="@string/login_forget_password"/>
     <TextView
@@ -45,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/login_password_perform_btn"
-        android:layout_marginTop="@dimen/size_common_30"
+        android:layout_marginTop="@dimen/size_common_25"
         android:layout_marginLeft="@dimen/size_common_15"
         android:text="@string/login_register_hachi"/>
 </RelativeLayout>
