--- a/passportlib/src/main/res/layout/fragment_password_modify_default.xml
+++ b/passportlib/src/main/res/layout/fragment_password_modify_default.xml
@@ -6,32 +6,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/size_common_15">
-    <cc.seedland.inf.passport.widget.PasswordOEditText
+    <cc.seedland.inf.passport.widget.PasswordEditText
         android:id="@+id/password_modify_origin_edt"
         style="@style/PasswordEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:hint="@string/password_modify_hint_origin"
-        app:button="@drawable/password_show_selector"/>
-    <cc.seedland.inf.passport.widget.PasswordOEditText
+        android:hint="@string/password_modify_hint_origin" />
+    <cc.seedland.inf.passport.widget.PasswordEditText
         android:id="@+id/password_modify_current_edt"
         style="@style/PasswordEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:hint="@string/hint_password"
-        app:button="@drawable/password_show_selector"/>
-    <cc.seedland.inf.passport.widget.PasswordOEditText
+        android:hint="@string/hint_password" />
+    <cc.seedland.inf.passport.widget.PasswordEditText
         android:id="@+id/password_modify_confirm_edt"
         style="@style/PasswordEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:hint="@string/hint_password_confirm"
-        app:button="@drawable/password_show_selector"/>
+        android:hint="@string/hint_password_confirm" />
     <Button
         android:id="@+id/password_modify_perform_btn"
         style="@style/PerformBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/size_common_30"
-        android:text="@string/register_do"/>
+        android:text="@string/text_finish"/>
 </cc.seedland.inf.passport.widget.DividerLinearLayout>
