--- a/passportlib/src/main/res/layout/fragment_password_reset_default.xml
+++ b/passportlib/src/main/res/layout/fragment_password_reset_default.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <cc.seedland.inf.passport.widget.DividerLinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/PassportDividerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,75 +9,27 @@
         android:id="@+id/password_reset_phone_edt"
         style="@style/PhoneEdit"
         android:layout_width="match_parent" />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <EditText
-            android:id="@+id/password_reset_captcha_image_edt"
-            style="@style/PassportEdit"
-            android:layout_width="0dp"
-            android:layout_weight="0.8"
-            android:hint="@string/hint_image_captcha"/>
-
-        <cc.seedland.inf.passport.widget.RatioImageView
-            android:id="@+id/password_reset_captcha_image_imv"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="0.2"
-            app:ratio="1.33"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <EditText
-            android:id="@+id/password_reset_captcha_edt"
-            style="@style/PassportEdit"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:drawableLeft="@drawable/ic_captcha"
-            android:drawablePadding="@dimen/size_common_10"
-            android:inputType="number"
-            android:maxLength="10"
-            android:hint="@string/hint_captcha"/>
-        <cc.seedland.inf.passport.widget.CountDownButton
-            android:id="@+id/password_reset_captcha_txv"
-            style="@style/PerformBorderBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_marginBottom="@dimen/size_common_5"
-            android:padding="@dimen/size_common_5"
-            android:text="@string/register_obtain_captcha"
-            app:countingText="@string/hint_captcha_counting"
-            app:countingTextColor="@color/default_gray"
-            app:endText="@string/text_captcha_retrieve"/>
-    </LinearLayout>
-
-    <cc.seedland.inf.passport.widget.PasswordOEditText
+    <include layout="@layout/include_image_captcha_edit_default" />
+    <include layout="@layout/include_captcha_edit_default" />
+    <cc.seedland.inf.passport.widget.PasswordEditText
         android:id="@+id/password_reset_password_edt"
         style="@style/PasswordEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:hint="@string/hint_password"
-        app:button="@drawable/password_show_selector"/>
-    <cc.seedland.inf.passport.widget.PasswordOEditText
+        android:hint="@string/hint_password" />
+    <cc.seedland.inf.passport.widget.PasswordEditText
         android:id="@+id/password_reset_confirm_edt"
         style="@style/PasswordEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:hint="@string/hint_password_confirm"
-        app:button="@drawable/password_show_selector"/>
+        android:hint="@string/hint_password_confirm" />
     <Button
         android:id="@+id/password_reset_perform_btn"
         style="@style/PerformBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/size_common_30"
-        android:text="@string/register_do"/>
+        android:text="@string/text_finish"/>
     <TextView
         style="@style/PassportLabel"
         android:layout_width="match_parent"
