--- a/passportlib/src/main/res/layout/fragment_password_reset_hachi.xml
+++ b/passportlib/src/main/res/layout/fragment_password_reset_hachi.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <cc.seedland.inf.passport.widget.DividerLinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/PassportDividerLayout"
+    style="@style/HachiDividerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <cc.seedland.inf.passport.widget.ClearEditText
@@ -15,19 +15,16 @@
         style="@style/HachiPasswordEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/hint_password" />
+        android:hint="@string/hint_password_hachi" />
+    <TextView
+        style="@style/HachiPassportTip"
+        android:text="@string/password_tip"/>
     <Button
         android:id="@+id/password_reset_perform_btn"
         style="@style/HachiPerformBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/size_common_30"
-        android:text="@string/do_save"/>
-    <TextView
-        style="@style/PassportLabel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/size_common_10"
         android:tag="divider:0"
-        android:text="@string/reset_password_tip"/>
+        android:text="@string/do_save"/>
 </cc.seedland.inf.passport.widget.DividerLinearLayout>
