--- a/passportlib/src/main/res/layout/fragment_register_hachi.xml
+++ b/passportlib/src/main/res/layout/fragment_register_hachi.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <cc.seedland.inf.passport.widget.DividerLinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/PassportDividerLayout"
+    style="@style/HachiDividerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -16,13 +16,23 @@
         style="@style/HachiPasswordEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/hint_password"/>
-
+        android:hint="@string/hint_password_hachi"/>
+    <TextView
+        style="@style/HachiPassportTip"
+        android:text="@string/password_tip"/>
     <Button
         android:id="@+id/register_perform_btn"
         style="@style/HachiPerformBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/size_common_30"
+        android:tag="divider:0"
         android:text="@string/register_do_hachi"/>
+    <android.support.v7.widget.AppCompatTextView
+        android:id="@+id/register_agreement_txv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/size_common_10"
+        android:layout_marginLeft="@dimen/size_common_15"
+        android:tag="divider:0"
+        android:textSize="@dimen/text_size_small" />
 </cc.seedland.inf.passport.widget.DividerLinearLayout>
