--- a/passportlib/src/main/res/drawable/bg_border_tab_normal.xml
+++ b/passportlib/src/main/res/drawable/bg_border_tab_normal.xml
@@ -8,7 +8,7 @@
     </item>
 
     <!-- 显示上、下边界 -->
-    <item android:top="1dp" android:bottom="1dp">
+    <item android:top="1px" android:bottom="1px">
         <shape android:shape="rectangle">
             <solid android:color="@color/gray_hachi"/>
         </shape>
