--- a/passportlib/src/main/res/layout/fragment_register_default.xml
+++ b/passportlib/src/main/res/layout/fragment_register_default.xml
@@ -11,73 +11,21 @@
         android:id="@+id/register_phone_edt"
         style="@style/PhoneEdit"
         android:layout_width="match_parent"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <EditText
-            android:id="@+id/register_captcha_image_edt"
-            style="@style/PassportEdit"
-            android:layout_width="0dp"
-            android:layout_weight="0.8"
-            android:hint="@string/hint_image_captcha"/>
-
-        <cc.seedland.inf.passport.widget.RatioImageView
-            android:id="@+id/register_captcha_image_imv"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="0.2"
-            app:ratio="1.33"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <EditText
-            android:id="@+id/register_captcha_edt"
-            style="@style/PassportEdit"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:drawableLeft="@drawable/ic_captcha"
-            android:drawablePadding="@dimen/size_common_10"
-            android:hint="@string/hint_captcha"
-            android:inputType="number"
-            android:maxLength="10"/>
-
-        <cc.seedland.inf.passport.widget.CountDownButton
-            android:id="@+id/register_captcha_txv"
-            style="@style/PerformBorderBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_marginBottom="@dimen/size_common_5"
-            android:padding="@dimen/size_common_5"
-            android:text="@string/register_obtain_captcha"
-            app:countingText="@string/hint_captcha_counting"
-            app:countingTextColor="@color/default_gray"
-            app:endText="@string/text_captcha_retrieve"/>
-    </LinearLayout>
-
-    <cc.seedland.inf.passport.widget.PasswordOEditText
+    <include layout="@layout/include_image_captcha_edit_default" />
+    <include layout="@layout/include_captcha_edit_default" />
+    <cc.seedland.inf.passport.widget.PasswordEditText
         android:id="@+id/register_password_edt"
         style="@style/PasswordEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:button="@drawable/password_show_selector"
-        app:hint="@string/hint_password"/>
+        android:hint="@string/hint_password"/>
 
-    <cc.seedland.inf.passport.widget.PasswordOEditText
+    <cc.seedland.inf.passport.widget.PasswordEditText
         android:id="@+id/register_password_confirm_edt"
         style="@style/PasswordEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:button="@drawable/password_show_selector"
-        app:hint="@string/hint_password_confirm"/>
+        android:hint="@string/hint_password_confirm"/>
 
     <Button
         android:id="@+id/register_perform_btn"
@@ -86,5 +34,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/size_common_30"
         android:text="@string/register_do"/>
+    <android.support.v7.widget.AppCompatTextView
+        android:id="@+id/register_agreement_txv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/size_common_10"
+        android:tag="divider:0"
+        android:textSize="@dimen/text_size_small" />
 </cc.seedland.inf.passport.widget.DividerLinearLayout>
     <!--</LinearLayout>-->
