--- a/passportlib/src/main/res/layout/include_image_captcha_edit_hachi.xml
+++ b/passportlib/src/main/res/layout/include_image_captcha_edit_hachi.xml
@@ -3,11 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@android:color/white"
     android:orientation="horizontal">
 
     <EditText
         android:id="@+id/captcha_image_edt"
-        style="@style/HachiPasswordEdit"
+        style="@style/HachiCaptchaEdit"
         android:layout_width="0dp"
         android:layout_weight="0.8"
         android:hint="@string/hint_image_captcha" />
@@ -19,6 +20,5 @@
         android:layout_gravity="center_vertical"
         android:layout_marginRight="@dimen/size_common_10"
         android:layout_weight="0.2"
-        android:background="@android:color/white"
         app:ratio="1.33" />
 </LinearLayout>
